--- a/src/main/resources/ru/app/public/Posts.html
+++ b/src/main/resources/ru/app/public/Posts.html
@@ -23,7 +23,8 @@
         <div class="container-fluid mx-5 p-0 ">
 
             <a class="navbar-brand" href="#">
-                <img src="images/favicon/frog-favicon.svg" alt="frog" width="30" height="24" class="d-inline-block align-text-bottom">
+                <img src="images/favicon/frog-favicon.svg" alt="frog" width="30" height="24"
+                     class="d-inline-block align-text-bottom">
                 Swamp
             </a>
 
@@ -33,7 +34,7 @@
                         <a class="nav-link green" href="./Main.html">Главная</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link green on_curr_page" >Посты</a>
+                        <a class="nav-link green on_curr_page">Посты</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link green">Чаты</a>
@@ -42,12 +43,14 @@
             </div>
 
 
-            <div class=" align-items-center ">
+            <div class=" align-items-center">
 
                 <a class="nav-link p-0 ms-1" href="#">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                         class="bi bi-person-circle" viewBox="0 0 16 16">
                         <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
-                        <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
+                        <path fill-rule="evenodd"
+                              d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
                     </svg>
                 </a>
             </div>
@@ -62,7 +65,6 @@
     </div>
 
 
-
 </header>
 
 
@@ -71,48 +73,45 @@
 
     <div class="row h-100 px-5 py-3">
 
-        <div class="col-2 p-0 ">
-            <div class="background_rounded h-100">
+        <div class="col-2 p-0 background_rounded">
 
-                <div class="mx-3">
+            <div class="mx-3">
 
-                    <div class="text">
-                        <p class="mb-4">Популярные теги</p>
+                <div class="text">
+                    <p class="mb-4">Популярные теги</p>
+                </div>
+
+
+                <div class="footer-text py-4">
+
+                    <div class="contents">
+                        <img src="images/svg/images-svgrepo-com.svg" class="rounded-3 " width="32" height="32"
+                             alt=""/>
+                        <p>Анектоды</p>
                     </div>
 
+                    <div class="contents">
+                        <img src="images/svg/images-svgrepo-com.svg" class="rounded-3 " width="32" height="32"
+                             alt=""/>
+                        <p>Еда</p>
+                    </div>
 
-                    <div class="footer-text py-4">
+                    <div class="contents">
+                        <img src="images/svg/images-svgrepo-com.svg" class="rounded-3 " width="32" height="32"
+                             alt=""/>
+                        <p class="m-0 ">Строительная компания "ВладЛох"</p>
+                    </div>
 
-                        <div class="contents">
-                            <img src="images/svg/images-svgrepo-com.svg" class="rounded-3 " width="32" height="32"
-                                 alt=""/>
-                            <p>Анектоды</p>
-                        </div>
+                    <div class="contents">
+                        <img src="images/svg/images-svgrepo-com.svg" class="rounded-3 " width="32" height="32"
+                             alt=""/>
+                        <p>Жизнь</p>
+                    </div>
 
-                        <div class="contents">
-                            <img src="images/svg/images-svgrepo-com.svg" class="rounded-3 " width="32" height="32"
-                                 alt=""/>
-                            <p>Еда</p>
-                        </div>
-
-                        <div class="contents">
-                            <img src="images/svg/images-svgrepo-com.svg" class="rounded-3 " width="32" height="32"
-                                 alt=""/>
-                            <p class="m-0 ">Строительная компания "ВладЛох"</p>
-                        </div>
-
-                        <div class="contents">
-                            <img src="images/svg/images-svgrepo-com.svg" class="rounded-3 " width="32" height="32"
-                                 alt=""/>
-                            <p>Жизнь</p>
-                        </div>
-
-                        <div class="contents">
-                            <img src="images/svg/images-svgrepo-com.svg" class="rounded-3 " width="32" height="32"
-                                 alt=""/>
-                            <p>Картинка с текстом</p>
-                        </div>
-
+                    <div class="contents">
+                        <img src="images/svg/images-svgrepo-com.svg" class="rounded-3 " width="32" height="32"
+                             alt=""/>
+                        <p>Картинка с текстом</p>
                     </div>
 
                 </div>
