--- a/src/main/resources/ru/app/public/Main.html
+++ b/src/main/resources/ru/app/public/Main.html
@@ -69,33 +69,28 @@
 
 <main class="container-fluid flex-fill">
 
+        <div class="row h-100 px-5 py-3 main_content">
 
-        <div class="row h-100 px-5 py-3">
+            <div class="col-2 p-0 background_rounded">
 
-            <div class="col-2 p-0 ">
-                <div class="background_rounded h-100">
+                <div class="mx-3">
 
-                    <div class="mx-3">
-
-                        <div class="text">
-                            <p class="mb-4">Статистика</p>
-                        </div>
-
+                    <div class="text">
+                        <p class="mb-4">Статистика</p>
                     </div>
 
                 </div>
 
-
             </div>
 
 
-            <div class="col-10 mb-3 p-0 ps-3">
+            <div class="col-10 mb-3 p-0 ps-3" >
 
-                <div class="background_rounded h-65 mb-3 img_container" id="scroll1">
+                <div class="background_rounded h-65 mb-3 img_container">
                     <img src="images/svg/swamp-01.svg" alt="Болото фон" class="">
                 </div>
 
-                <div class="background_rounded h-35" id="scroll2">
+                <div class="background_rounded h-35 ">
                     <div class="site_info_div rounded-top-4 py-2 ps-4">
                         <h6 class="m-0">
                             Информация о сайте
