--- a/src/main/resources/ru/app/public/Main.html
+++ b/src/main/resources/ru/app/public/Main.html
@@ -10,6 +10,7 @@
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/general.css" rel="stylesheet">
     <link href="css/Main.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
 
 </head>
 
@@ -75,6 +76,66 @@
             <div class="mx-3">
                 <div class="text">
                     <p class="mb-4">Статистика</p>
+                </div>
+                
+                <div class="buttons py-3">
+
+
+                    <div class="button">
+                        <button class="  w-100 ">
+                            <div class="d-flex justify-content-between align-items-center ">
+                               <p class="input-text  p-0 m-0">Posts</p>
+                               <p class="number p-0 m-0">6</p>
+                            </div>
+                        </button>
+                    </div>
+
+                    <div class="button">
+                        <button class="  w-100 ">
+                            <div class="d-flex justify-content-between align-items-center ">
+                                <p class="input-text  p-0 m-0">Posts</p>
+                                <p class="number p-0 m-0">6</p>
+                            </div>
+                        </button>
+                    </div>
+
+                    <div class="button">
+                        <button class="  w-100 ">
+                            <div class="d-flex justify-content-between align-items-center ">
+                                <p class="input-text  p-0 m-0">Posts</p>
+                                <p class="number p-0 m-0">6</p>
+                            </div>
+                        </button>
+                    </div>
+
+                    <div class="button">
+                        <button class="  w-100 ">
+                            <div class="d-flex justify-content-between align-items-center ">
+                                <p class="input-text  p-0 m-0">Posts</p>
+                                <p class="number p-0 m-0">6</p>
+                            </div>
+                        </button>
+                    </div>
+
+                    <div class="button">
+                        <button class="  w-100 ">
+                            <div class="d-flex justify-content-between align-items-center ">
+                                <p class="input-text  p-0 m-0">Posts</p>
+                                <p class="number p-0 m-0">6</p>
+                            </div>
+                        </button>
+                    </div>
+
+                    <div class="button">
+                        <button class="  w-100  ">
+                            <div class="d-flex justify-content-between align-items-center ">
+                                <p class="input-text  p-0 m-0">Posts</p>
+                                <p class="number p-0 m-0">6</p>
+                            </div>
+                        </button>
+                    </div>
+
+
                 </div>
             </div>
 
