--- a/src/main/resources/ru/app/public/Main.html
+++ b/src/main/resources/ru/app/public/Main.html
@@ -11,6 +11,7 @@
     <link href="css/general.css" rel="stylesheet">
     <link href="css/Main.css" rel="stylesheet">
     <link href="css/Tooltip.css" rel="stylesheet">
+    <link href="css/Scrollbar.css" rel="stylesheet">
 
 </head>
 
@@ -18,21 +19,20 @@
 
 <header class="header">
 
-
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark ">
 
         <div class="container-fluid mx-5 p-0 ">
 
             <a class="navbar-brand">
-                <img src="images/favicon/frog-favicon.svg" alt="frog" width="30" height="24" class="d-inline-block align-text-bottom">
+                <img src="images/favicon/frog-favicon.svg" alt="frog" width="30" height="24"
+                     class="d-inline-block align-text-bottom">
                 Swamp
             </a>
 
             <div class="navbar_nav_center">
-                <ul class="navbar-nav  general_navbar">
+                <ul class="navbar-nav general_navbar">
                     <li class="nav-item">
-                        <a class="nav-link green on_curr_page" >Главная</a>
+                        <a class="nav-link green on_curr_page">Главная</a>
                     </li>
                     <li class="nav-item mx-3 mx-lg-2">
                         <a class="nav-link green" href="./Posts.html">Посты</a>
@@ -46,9 +46,11 @@
             <div class=" align-items-center">
 
                 <a class="nav-link p-0 ms-1 " href="#">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                         class="bi bi-person-circle" viewBox="0 0 16 16">
                         <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
-                        <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
+                        <path fill-rule="evenodd"
+                              d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
                     </svg>
                 </a>
             </div>
@@ -56,12 +58,11 @@
 
     </nav>
 
-    <div class="justify-content-around w-100 additional_navbar pb-1" hidden="hidden">
+    <div class="justify-content-around w-100 additional_navbar py-1" hidden="hidden">
         <a class="green on_curr_page">Главная</a>
         <a class="green mx-3" href="./Posts.html">Посты</a>
         <a class="green">Чаты</a>
     </div>
-
 
 
 </header>
@@ -69,122 +70,150 @@
 
 <main class="container-fluid">
 
-    <div class="row px-5 py-3 main_content">
+    <div class="row px-4 px-md-5 py-3 main_content">
 
-        <div class="col-12 col-xl-2 col-lg-3 p-0 background_rounded mt-3 mt-lg-0">
+        <div class="col-12 col-xl-2 col-lg-3 p-0 background_rounded bg-white mt-0">
 
-            <div class="mx-3">
+            <div class="px-3 pb-3 background_rounded bg-white" id="div1">
                 <div class="text">
                     <p>Статистика</p>
                 </div>
 
-                <div class="statistic_item mt-3 rounded-1">
+                <div class="statistic_item mt-3 rounded-1" data-tooltip="73453">
                     <img src="images/icons/pencil-fill.svg" alt="posts"/>
 
                     <p class="m-0">
                         Посты
                     </p>
 
-                    <div class="my-tooltip">
-                        <div class="tooltip-wrapper">
-                            <p class="counter">
-                                00000000000000000000000000000
-                            </p>
-                        </div>
-                        <span class="tooltip-text" id="fade">I'm a tooltip!</span>
+                    <div class="ms-auto tooltip-trigger">
+                        <p class="counter">
+                            73453
+                        </p>
                     </div>
+
                 </div>
 
-                <div class="statistic_item mt-2 rounded-1">
+                <div class="statistic_item mt-2 rounded-1" data-tooltip="987654321012">
                     <img src="images/icons/chat-square-text-fill.svg" alt="comments"/>
 
                     <p class="m-0">
                         Комментарии
                     </p>
 
-                    <div class="my-tooltip">
-                        <div class="tooltip-wrapper">
-                            <p class="counter">
-                                00000000000000000000000000000
-                            </p>
-                        </div>
-                        <span class="tooltip-text" id="fade">I'm a tooltip!</span>
+                    <div class="ms-auto tooltip-trigger">
+                        <p class="counter">
+                            987654321012
+                        </p>
                     </div>
+
                 </div>
 
-                <div class="statistic_item mt-2 rounded-1">
+                <div class="statistic_item mt-2 rounded-1" data-tooltip="12673800">
                     <img src="images/icons/hand-thumbs-up-fill.svg" alt="grades"/>
 
                     <p class="m-0">
                         Оценки
                     </p>
 
-                    <div class="my-tooltip">
-                        <div class="tooltip-wrapper">
-                            <p class="counter">
-                                00000000000000000000000000000
-                            </p>
-                        </div>
-                        <span class="tooltip-text" id="fade">I'm a tooltip!</span>
+                    <div class="ms-auto tooltip-trigger">
+                        <p class="counter">
+                            12673800
+                        </p>
                     </div>
+
                 </div>
 
-                <div class="statistic_item mt-2 rounded-1">
+                <div class="statistic_item mt-2 rounded-1" data-tooltip="123">
                     <img src="images/icons/person-fill.svg" alt="users"/>
 
                     <p class="m-0">
                         Пользователи
                     </p>
 
-                    <div class="my-tooltip">
-                        <div class="tooltip-wrapper">
-                            <p class="counter">
-                                1234567890987654321
-                            </p>
-                        </div>
-                        <span class="tooltip-text" id="fade">I'm a tooltip!</span>
+                    <div class="ms-auto tooltip-trigger">
+                        <p class="counter">
+                            123
+                        </p>
                     </div>
+
                 </div>
 
 
-                <div class="statistic_item mt-2 rounded-1">
+                <div class="statistic_item mt-2 rounded-1" data-tooltip="0">
                     <img src="images/icons/chat-fill.svg" alt="messages"/>
 
                     <p class="m-0">
                         Сообщения
                     </p>
 
-                    <div class="my-tooltip">
-                        <div class="tooltip-wrapper">
-                            <p class="counter">
-                                0
-                            </p>
-                        </div>
-                        <span class="tooltip-text" id="fade">I'm a tooltip!</span>
+                    <div class="ms-auto tooltip-trigger">
+                        <p class="counter">
+                            0
+                        </p>
                     </div>
+
                 </div>
 
             </div>
 
         </div>
 
+        <div class="col-12 col-xl-10 col-lg-9 p-0 ps-lg-3">
 
-        <div class="col-12 col-xl-10 col-lg-9 mb-3 p-0 ps-lg-3">
+            <div class="scrollable-wrapper ">
 
-            <div class="background_rounded h-65 mb-3 img_container">
-                <img src="images/svg/swamp-01.svg" alt="Болото фон">
-            </div>
+                <div class="scrollable-content pe-3">
 
-            <div class="background_rounded text_container">
-                <div class="site_info_div rounded-top-4 py-2 ps-4">
-                    <h6 class="m-0">Информация о сайте</h6>
+                    <div class="background_rounded h-65 mb-3 img_container">
+                        <img src="images/svg/swamp-01.svg" alt="Болото фон">
+                    </div>
+
+                    <div class="background_rounded bg-white text_container mb-3">
+
+                        <div class="site_info_div rounded-top-4 py-2 ps-4">
+                            <h6 class="m-0">Новости</h6>
+                        </div>
+
+                        <p class="ps-4">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias amet, at consequuntur
+                            dolorem,
+                            doloremque ducimus ea fugiat incidunt magnam, modi nemo non odit possimus quam qui ratione
+                            recusandae soluta tenetur.
+
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias amet, at consequuntur
+                            dolorem,
+                            doloremque ducimus ea fugiat incidunt magnam, modi nemo non odit possimus quam qui ratione
+                            recusandae soluta tenetur.
+
+                        </p>
+
+                    </div>
+
+                    <div class="background_rounded bg-white text_container mb-3 mb-lg-0">
+
+                        <div class="site_info_div rounded-top-4 py-2 ps-4">
+                            <h6 class="m-0">Информация о сайте</h6>
+                        </div>
+
+                        <p class="ps-4" style="height: 800px;">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias amet, at consequuntur
+                            dolorem,
+                            doloremque ducimus ea fugiat incidunt magnam, modi nemo non odit possimus quam qui ratione
+                            recusandae soluta tenetur.
+
+                        </p>
+
+                    </div>
+
+                    <div id="div2">
+
+                    </div>
+
+
                 </div>
-                <p class="ps-4">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias amet, at consequuntur dolorem,
-                    doloremque ducimus ea fugiat incidunt magnam, modi nemo non odit possimus quam qui ratione
-                    recusandae soluta tenetur.
-                </p>
             </div>
+
 
         </div>
 
