--- a/src/main/resources/ru/app/public/Posts.html
+++ b/src/main/resources/ru/app/public/Posts.html
@@ -73,7 +73,7 @@
 
     <div class="row h-100 px-5 py-3">
 
-        <div class="col-2 p-0 background_rounded">
+        <div class="col-2 p-0 background_rounded bg-white">
 
             <div class="mx-3">
 
@@ -124,7 +124,7 @@
 
         <div class="col-10 p-0 ps-3">
 
-            <div class="background_rounded h-100">
+            <div class="background_rounded bg-white h-100">
 
             </div>
 
