попытки починить scroll

--- a/src/main/resources/ru/app/public/Main.html
+++ b/src/main/resources/ru/app/public/Main.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body class="d-flex flex-column">
+<body>
 
 <header class="header">
 
@@ -70,7 +70,7 @@
 
 <main class="container-fluid">
 
-    <div class="row px-4 px-md-5 py-3 main_content">
+    <div class="row px-4 px-md-5 py-3">
 
         <div class="col-12 col-xl-2 col-lg-3 p-0 background_rounded bg-white mt-0">
 
@@ -161,57 +161,54 @@
 
         <div class="col-12 col-xl-10 col-lg-9 p-0 ps-lg-3">
 
-            <div class="scrollable-wrapper ">
+            <div class="scrollable-content flex-grow-1 pe-3">
 
-                <div class="scrollable-content pe-3">
+                <div class="background_rounded mb-3 img_container" style="height: 350px;">
+                    <img src="images/svg/swamp-01.svg" alt="Болото фон">
+                </div>
 
-                    <div class="background_rounded h-65 mb-3 img_container">
-                        <img src="images/svg/swamp-01.svg" alt="Болото фон">
+                <div class="background_rounded bg-white text_container mb-3">
+
+                    <div class="site_info_div rounded-top-4 py-2 ps-4">
+                        <h6 class="m-0">Новости</h6>
                     </div>
 
-                    <div class="background_rounded bg-white text_container mb-3">
+                    <p class="ps-4">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias amet, at consequuntur
+                        dolorem,
+                        doloremque ducimus ea fugiat incidunt magnam, modi nemo non odit possimus quam qui ratione
+                        recusandae soluta tenetur.
 
-                        <div class="site_info_div rounded-top-4 py-2 ps-4">
-                            <h6 class="m-0">Новости</h6>
-                        </div>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias amet, at consequuntur
+                        dolorem,
+                        doloremque ducimus ea fugiat incidunt magnam, modi nemo non odit possimus quam qui ratione
+                        recusandae soluta tenetur.
 
-                        <p class="ps-4">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias amet, at consequuntur
-                            dolorem,
-                            doloremque ducimus ea fugiat incidunt magnam, modi nemo non odit possimus quam qui ratione
-                            recusandae soluta tenetur.
-
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias amet, at consequuntur
-                            dolorem,
-                            doloremque ducimus ea fugiat incidunt magnam, modi nemo non odit possimus quam qui ratione
-                            recusandae soluta tenetur.
-
-                        </p>
-
-                    </div>
-
-                    <div class="background_rounded bg-white text_container mb-3 mb-lg-0">
-
-                        <div class="site_info_div rounded-top-4 py-2 ps-4">
-                            <h6 class="m-0">Информация о сайте</h6>
-                        </div>
-
-                        <p class="ps-4" style="height: 800px;">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias amet, at consequuntur
-                            dolorem,
-                            doloremque ducimus ea fugiat incidunt magnam, modi nemo non odit possimus quam qui ratione
-                            recusandae soluta tenetur.
-
-                        </p>
-
-                    </div>
-
-                    <div id="div2">
-
-                    </div>
-
+                    </p>
 
                 </div>
+
+                <div class="background_rounded bg-white text_container mb-3 mb-lg-0">
+
+                    <div class="site_info_div rounded-top-4 py-2 ps-4">
+                        <h6 class="m-0">Информация о сайте</h6>
+                    </div>
+
+                    <p class="ps-4 mb-0" style="height: 1000px;">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias amet, at consequuntur
+                        dolorem,
+                        doloremque ducimus ea fugiat incidunt magnam, modi nemo non odit possimus quam qui ratione
+                        recusandae soluta tenetur.
+
+                    </p>
+
+                </div>
+
+                <div id="div2">
+
+                </div>
+
+
             </div>
 
 
