--- a/src/main/resources/ru/app/public/Main.html
+++ b/src/main/resources/ru/app/public/Main.html
@@ -70,9 +70,9 @@
 
 <main class="container-fluid">
 
-    <div class="row px-4 px-md-5 py-3">
+    <div class="row px-4 px-md-5 py-3 h-100">
 
-        <div class="col-12 col-xl-2 col-lg-3 p-0 background_rounded bg-white mt-0">
+        <div class="col-12 col-xl-2 col-lg-3 p-0 background_rounded bg-white mt-0 d-inline">
 
             <div class="px-3 pb-3 background_rounded bg-white" id="div1">
                 <div class="text">
@@ -159,9 +159,9 @@
 
         </div>
 
-        <div class="col-12 col-xl-10 col-lg-9 p-0 ps-lg-3">
-
-            <div class="scrollable-content flex-grow-1 pe-3">
+        <div class="col-12 col-xl-10 col-lg-9 p-0 ps-lg-3 h-100 " >
+        <div class="main_pack h-100 ">
+            <div class="scrollable-content flex-grow-1 pe-3 ">
 
                 <div class="background_rounded mb-3 img_container" style="height: 350px;">
                     <img src="images/svg/swamp-01.svg" alt="Болото фон">
@@ -188,17 +188,18 @@
 
                 </div>
 
-                <div class="background_rounded bg-white text_container mb-3 mb-lg-0">
+                <div class="background_rounded bg-white text_container  mb-lg-0">
 
                     <div class="site_info_div rounded-top-4 py-2 ps-4">
                         <h6 class="m-0">Информация о сайте</h6>
                     </div>
 
-                    <p class="ps-4 mb-0" style="height: 1000px;">
+                    <p class="ps-4 mb-0" style="height:500px;" >
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias amet, at consequuntur
                         dolorem,
                         doloremque ducimus ea fugiat incidunt magnam, modi nemo non odit possimus quam qui ratione
                         recusandae soluta tenetur.
+
 
                     </p>
 
@@ -213,10 +214,14 @@
 
 
         </div>
+        </div>
 
-    </div>
+        </div>
+
+
 
 </main>
+
 
 <script src="js/Main.js"></script>
 
