--- a/src/main/resources/ru/app/public/Posts.html
+++ b/src/main/resources/ru/app/public/Posts.html
@@ -31,7 +31,7 @@
             <div class="navbar_nav_center">
                 <ul class="navbar-nav  general_navbar">
                     <li class="nav-item">
-                        <a class="nav-link green" href="./Main.html">Главная</a>
+                        <a class="nav-link green" href="./Main_Page.html">Главная</a>
                     </li>
                     <li class="nav-item mx-2">
                         <a class="nav-link green on_curr_page">Посты</a>
