Переносим MainPage на React

--- a/backend/src/main/resources/ru/app/public/Main.html
+++ b/backend/src/main/resources/ru/app/public/Main.html
@@ -21,11 +21,11 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark ">
 
-        <div class="container-fluid mx-5 p-0 ">
+        <div class="container-fluid mx-4 p-0 ">
 
             <a class="navbar-brand">
                 <img src="images/favicon/frog-favicon.svg" alt="frog" width="30" height="24"
-                     class="d-inline-block align-text-bottom">
+                     class="d-inline-block align-text-bottom"/>
                 Swamp
             </a>
 
@@ -45,7 +45,7 @@
 
             <div class=" align-items-center">
 
-                <a class="nav-link p-0 ms-1 " href="#">
+                <a class="nav-link p-0 ms-1" href="#">
                     <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                          class="bi bi-person-circle" viewBox="0 0 16 16">
                         <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
@@ -63,7 +63,6 @@
         <a class="green mx-3" href="Posts.html">Посты</a>
         <a class="green">Чаты</a>
     </div>
-
 
 </header>
 
