--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="theme-color" content="#222629"/>
     <link rel="icon" type="image/png" href="../src/assets/images/favicon/frog-favicon.svg" sizes="32x32"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <title>Swamp</title>
