--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <meta name="theme-color" content="#222629"/>
+
+    <!-- Chrome, Firefox OS and Opera -->
+    <meta name="theme-color" content="#222629" />
+
+    <!-- iOS Safari -->
+<!--    <meta name="apple-mobile-web-app-capable" content="yes" />-->
+<!--    <meta name="apple-mobile-web-app-status-bar-style" content="black-transcluent" />-->
+
+<!--    <link rel="apple-touch-icon" href="../src/assets/images/favicon/frog-favicon.png">-->
     <link rel="icon" type="image/png" href="../src/assets/images/favicon/frog-favicon.svg" sizes="32x32"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <title>Swamp</title>
@@ -15,7 +23,9 @@
     <div id="root">
 
     </div>
+
 </body>
 
 
 </html>
+
